<resources>
    <string name="app_name">Noteit</string>
    <string name="cont_prev">Note content preview</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="all_notes">All Notes</string>
    <string name="favourite">Favorite</string>
    <string name="hidden">Hidden</string>
    <string name="trash">Trash</string>
    <string name="category">Category</string>
    <string name="recent_notes">Recent Notes</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="save_pin">Simpan PIN</string>
    <string name="add_pin">Masukkan PIN</string>
    <string name="confirm_pin">Konfirmasi PIN</string>
    <string name="batal">Batal</string>
    <string name="setting">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="set_pin">Set PIN</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="note_title">Note Title</string>
    <string name="note_content">Note Content</string>
    <string name="star_favorite">★ Favorite</string>
    <string name="page_title">Page Title</string>
    <string name="write_note">Write your note here...</string>
    <string name="notes">Notes</string>
    <string name="event">Event</string>
    <string name="enter_your_old_pin">Enter your old pin</string>
    <string name="enter_your_pin">Enter your pin</string>
    <string name="back_button_description">Tombol kembali</string>
    <string name="backspace_button_description">Tombol hapus</string>
    <string name="enter_your_new_pin">Enter your new PIN</string>
    <string name="confirm_your_new_pin">Confirm your new PIN</string>

    <string name="security_question_setup_title">Set Security Question</string>
    <string name="select_your_question">Select your secret question:</string>
    <string name="next">Next</string>
    <string name="input_security_answer_title">Input Your Answer</string>
    <string name="your_selected_question">Your question:</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="save_answer">Save Answer</string>
    <string name="forgot_pin_question">Forgot PIN?</string>
    <string name="forgot_pin_title">Reset Your PIN</string>
    <string name="verify_answer">Verify Answer</string>
    <string name="no_security_question_set">No security question has been set.</string>
    <string name="error_question_not_found">Error: Question not found.</string>
    <string name="categories">Categories</string>
    <string name="category_name">Category Name</string>

    <string-array name="security_questions">
        <item>-- Select a question --</item>
        <item>What was your first pet\'s name?</item>
        <item>What city were you born in?</item>
        <item>What is your favorite color?</item>
        <item>What is your mother\'s maiden name?</item>
        <item>What was the make of your first car?</item>
    </string-array>




</resources>
