<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingTop="24dp">

    <!-- Header -->
    <TextView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_arrow_back"
        android:drawablePadding="8dp"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/green_primary"
        android:textColor="@android:color/white"
        android:layout_marginEnd="16dp"
        android:minHeight="36dp"
        android:minWidth="60dp"
        app:cornerRadius="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Judul -->
    <EditText
        android:id="@+id/editTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/page_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:layout_marginEnd="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toTopOf="@id/editTitle"
        app:layout_constraintBottom_toBottomOf="@id/editTitle"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Isi catatan -->
    <EditText
        android:id="@+id/editContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/write_note"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:background="@android:color/transparent"
        android:textSize="16sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/editTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
